fix svg alignment and styling

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -80,12 +80,13 @@
   border-radius: 5x;
   border: 2px solid;
   align-items: center;
-  width: 300px;
+  width: 100%;
   color: #0077B6;
   border-bottom-left-radius: 100px 200px;
   border-top-left-radius: 10px;
   border-bottom-right-radius: 25px;
   border-bottom: 12px;
+  margin-bottom: 50px;
 }
 
 @media (max-width: 480px) {
@@ -96,6 +97,7 @@
     border-top-left-radius: 10px;
     border-bottom-right-radius: 25px;
     border-bottom: 12px;
+
   }
 }
 .blockTitle{
